--- a/src/app/food/food.component.html
+++ b/src/app/food/food.component.html
@@ -7,7 +7,7 @@
     </ul>
     <ul>
         <li *ngFor="let item of shoppingList" (click)="RemoveFromList(item)">
-            <h3>{{item.Name}}</h3>
+            <h3>{{item.Name}} x{{multipliers[item.Name]}}</h3>
             <p>{{item.Price | currency}}</p>
         </li>
         <h3 id="price">Total price: {{price | currency}}</h3>
